Starting to break things up and add UI

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>Bluesky Hashtag Follower — Gavin Anderegg</title>
+	<title>Bluesky Hashtag Follower by Gavin Anderegg</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 
 <body>
-	<main>
+	<header>
+		<input type="text" name="hashtag" id="hashtag">
+	</header>
 
+	<main>
+		<div id="skeetContainer"></div>
 	</main>
+
+	<footer></footer>
 
 	<script src="./jquery.js"></script>
 	<script src="./main.js"></script>
