Appending content and user/post links

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<title>Bluesky Hashtag Follower by Gavin Anderegg</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
 	<header>
-		<input type="text" name="hashtag" id="hashtag">
+		# <input type="text" name="hashtagInput" id="hashtagInput"> <input type="checkbox" name="clearCheck" id="clearCheck"> clear? <button id="goButton">go</button> <button id="stopButton">stop</button>
 	</header>
 
 	<main>
