Placeholder text and more styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div>
-			<input type="text" name="hashtagInput" id="hashtagInput"> <button id="goButton">go</button> <button id="stopButton">stop</button> <button id="clearButton">clear</button>
+			<input type="text" name="hashtagInput" id="hashtagInput" placeholder="Enter search text or hashtag"> <button id="goButton">go</button> <button id="stopButton">stop</button> <button id="clearButton">clear</button>
 		</div>
 
 		<div id="counter">Posts encountered: <span class="count">0</span></div>
