--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Bluesky Filter by Gavin Anderegg</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="./main.css">
+	<meta name="description" content="A simple front-end only demo of filtering the Bluesky Jetstream firehose.">
 </head>
 
 <body>
