A bit more context

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Bluesky Filter by Gavin Anderegg</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="./main.css">
-	<meta name="description" content="A simple front-end only demo of filtering the Bluesky Jetstream firehose.">
+	<meta name="description" content="A simple front-end only demo of filtering the Bluesky Jetstream firehose. Type a word or phrase you'd like to monitor into the text field and hit 'go' to get started.">
 </head>
 
 <body>
